Fix too big default font size

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,4 +1,3 @@
-
 body {
   background: url(bg.png);
 }
@@ -50,7 +49,7 @@ body {
 
 .content {
   padding: 12px;
-  font-size: 18px;
+  font-size: 13px;
   line-height: 1.8;
 }
 
